[gd_scene load_steps=14 format=2]

[ext_resource path="res://Art/Fonts/UI.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://Art/Fonts/UI_25.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/UI/PanelBG.tres" type="StyleBox" id=4]
[ext_resource path="res://Art/Buttons/ButtonHover_Pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Art/Buttons/ButtonNormal.tres" type="StyleBox" id=6]
[ext_resource path="res://Art/Fonts/UI_huge.tres" type="DynamicFont" id=7]
[ext_resource path="res://Art/Buttons/RestartShortcut.tres" type="ShortCut" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="InputEventAction" id=2]
action = "pause"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "ui_accept"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelNum" type="Label" parent="VBoxContainer"]
margin_right = 384.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "Level #"
align = 2

[node name="Checkpoint" type="Label" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 384.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 3 )
text = "Checkpoint"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 384.0
margin_bottom = 450.0
size_flags_vertical = 3
alignment = 2

[node name="Timer" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 327.0
margin_right = 384.0
margin_bottom = 365.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "##:##"
align = 1
valign = 2

[node name="SpeedrunTimer" type="Timer" parent="VBoxContainer/HBoxContainer"]
pause_mode = 1
wait_time = 4096.0
one_shot = true
autostart = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="VBoxContainer2"]
margin_right = 77.0
margin_bottom = 46.0
rect_min_size = Vector2( 77, 0 )
size_flags_horizontal = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 50.0
margin_right = 384.0
margin_bottom = 450.0
size_flags_vertical = 3

[node name="RestartButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
margin_top = 354.0
margin_right = 109.0
margin_bottom = 400.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 109, 0 )
size_flags_horizontal = 0
size_flags_vertical = 8
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
shortcut_in_tooltip = false
shortcut = ExtResource( 8 )
text = "Restart"

[node name="PauseButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
margin_left = 113.0
margin_top = 354.0
margin_right = 204.0
margin_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 91, 0 )
size_flags_horizontal = 2
size_flags_vertical = 8
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "Pause"

[node name="TextureRect" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 240.0
margin_top = 48.0
margin_right = -237.0
margin_bottom = 31.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinMessage" type="Label" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 8.0
margin_right = -15.0
margin_bottom = -72.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Good job!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 54.0
margin_top = 136.0
margin_right = -61.0
margin_bottom = -19.0
size_flags_horizontal = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 5 )
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartWarning" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 240.0
margin_top = 48.0
margin_right = -237.0
margin_bottom = 31.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartWarning" type="Label" parent="RestartWarning"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 8.0
margin_right = -19.0
margin_bottom = -80.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Are you sure you want to restart?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="RestartWarning"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 168.0
margin_top = 136.0
margin_right = -48.0
margin_bottom = -19.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
shortcut_in_tooltip = false
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="RestartWarning"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 136.0
margin_right = -168.0
margin_bottom = -19.0
rect_min_size = Vector2( 75, 0 )
size_flags_horizontal = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
shortcut_in_tooltip = false
shortcut = ExtResource( 8 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="toggled" from="VBoxContainer2/HBoxContainer/PauseButton" to="." method="_on_PauseButton_toggled"]
[connection signal="pressed" from="TextureRect/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="RestartWarning/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="RestartWarning/Yes" to="." method="_on_RestartButton_pressed"]
